# yew-callback

./: .gitlab-ci.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: audit.yml  ci.yml
src/: lib.rs
tests/: callback.rs
