[package]
name = "yew-callback"
version = "0.1.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/sanpii/yew-callback"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"

[dependencies.syn]
version = "2.0"
features = ["full"]
