[package]
name = "yew-callback"
version = "0.1.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/sanpii/yew-callback"
description = "Macro helps you to create yew::Callback"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"

[dependencies.syn]
version = "2.0"
features = ["full"]

[dev-dependencies]
yew = "0.22"
